# bones

./: AnimCore.h  CMakeLists.txt  Character.dae  FindGLEW.cmake  FindSOIL.cmake  MD5Reader.cpp  MD5Reader.h  MD5_AnimReader.cpp  MD5_AnimReader.h  MD5_MeshReader.cpp  MD5_MeshReader.h  Main.cpp  Makefile  README.md  Shader.cpp  Shader.h  Skeleton.frag  Skeleton.vert  animated_render.cpp  baseframe_render.cpp  baseframe_shader.frag  baseframe_shader.vert  conversion_test.cpp  embuild.sh  mesh.frag  mesh.vert  simple.frag  simple.vert  skeleton_test.cpp  testmesh.frag  testmesh.vert
Boblamp/: boblampclean.md5mesh  boblampclean.md5mesh.short
Character/: workspace.mel
Character/scenes/: Character.mb
